# timeout

./: .gitignore  LICENSE  README  timeout.cabal
System/IO/: Timeout.hs  Timeout.hs~
System/IO/Timeout/: Handle.hs~  Socket.hs  Socket.hs~
examples/: tcp-echo.hs
src/System/IO/: Timeout.hs  TimeoutTable.hs
src/System/IO/Timeout/: Sendfile.hs  Socket.hs
test/: timeout-test.cabal
test/psq-benchmarks/: Main.hs
